# openbrief

./: .gitignore  AGENTS.md  PLAN_FLUIDAUDIO.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bundled-binary-smoke.yml  qwen-asr-smoke.yml  qwen-tts-smoke.yml  release.yml  supertonic-smoke.yml  transcribe-smoke.yml
client/: .env.example  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
client/apps/expo/: package.json
client/apps/expo/src/app/: _layout.tsx  feedback.tsx  index.tsx
client/apps/expo/src/app/share/: [id].tsx  scan.tsx
client/apps/nextjs/: package.json  vercel.json
client/apps/nextjs/src/: env.ts  middleware.ts
client/apps/nextjs/src/app/: layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
client/apps/nextjs/src/auth/: server.ts
client/apps/nextjs/src/server/: r2.ts  worker.ts
client/apps/tanstack-start/: package.json
client/apps/tauri/: index.html  overlay.html  package.json  vite.config.ts
client/apps/tauri/scripts/: benchmark-stt-sidecars.js  build-fluidaudio-sidecar.js  build-fluidaudio-sidecar.test.ts  build-helper-sidecar.js  build-helper-sidecar.test.ts  build-localai-sidecar.js  build-localai-sidecar.test.ts  build-voicebox-sidecar.js  build-voicebox-sidecar.test.ts  prepare-media-assets.js  prepare-media-assets.test.ts  setup-dev-sidecars.js  setup-dev-sidecars.test.ts  tauri-sidecar-config.test.ts
client/apps/tauri/src/: App.tsx  index.css  main.tsx  overlay.css  overlay.tsx  vite-env.d.ts
client/apps/tauri/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
client/apps/tauri/src-tauri/.cargo/: config.toml
client/apps/tauri/src-tauri/binaries/: .gitignore  README.md
client/apps/tauri/src-tauri/capabilities/: default.json
client/apps/tauri/src-tauri/entitlements/: macos-pyinstaller-sidecars.plist
client/apps/tauri/src-tauri/helper/: Cargo.toml
client/apps/tauri/src-tauri/helper/src/: main.rs
client/apps/tauri/src-tauri/icons/: icon.icns
client/apps/tauri/src-tauri/resources/media-tools/: manifest.json
client/apps/tauri/src-tauri/sidecars/fluidaudio-swift/: Package.resolved  Package.swift
client/apps/tauri/src-tauri/sidecars/fluidaudio-swift/Sources/OpenBriefFluidAudio/: main.swift
client/apps/tauri/src-tauri/sidecars/localai-python/: openbrief_localai.py  pyproject.toml
client/apps/tauri/src-tauri/sidecars/voicebox-python/: openbrief_voicebox.py  pyproject.toml
client/apps/tauri/src-tauri/src/: credentials.rs  fluidaudio.rs  headless_download.rs  helper.rs  helper_sidecar.rs  ingest.rs  lib.rs  main.rs  media_library.rs  media_tools.rs  platform_plugins.rs  provider.rs  qwen_asr.rs  runtime_tools.rs  storage_usage.rs  stt_models.rs  supertonic.rs  trusted_paths.rs  video_download_access.rs  workspace.rs
client/apps/tauri/src-tauri/tests/: config_security.rs
client/apps/tauri/src/app/: AppLayout.test.tsx  AppLayout.tsx  AppShell.tsx  navigationShortcuts.ts
client/apps/tauri/src/components/: CopyAction.tsx
client/apps/tauri/src/domain/: chat.test.ts  chat.ts  compatibility.test.ts  compatibility.ts  download-error.test.ts  download-error.ts  editor-agent.test.ts  editor-agent.ts  helper-protocol.test.ts  helper-protocol.ts  ingest.test.ts  ingest.ts  markdown-save.test.ts  markdown-save.ts  media-library.test.ts  media-library.ts  platform.test.ts  platform.ts  podcast.test.ts  podcast.ts  provider.test.ts  provider.ts  quiz.test.ts  quiz.ts  settings.test.ts  settings.ts  share.test.ts  share.ts  summary.test.ts  summary.ts  transcript-actions.ts  transcript.test.ts  transcript.ts  user-facing-error.test.ts  user-facing-error.ts  video-component-catalog.test.ts  video-component-catalog.ts  video-generation.test.ts  video-generation.ts
client/apps/tauri/src/hooks/: useDebouncedValue.test.tsx  useMediaLibrary.test.ts  useMediaLibrary.ts  useSettingsSnapshot.ts  useTauriFileDrop.ts  useVideoPlayback.test.ts  useVideoPlayback.ts
client/apps/tauri/src/i18n/: i18n.test.ts  index.tsx
client/apps/tauri/src/services/: aiProviderPreferencesService.test.ts  aiProviderPreferencesService.ts  artifactExportService.test.ts  artifactExportService.ts  browserThumbnail.ts  clipboardService.ts  editorAgentService.test.ts  editorAgentService.ts  externalUrlService.test.ts  externalUrlService.ts  fakeHelperClient.ts  fileRevealService.test.ts  fileRevealService.ts  generationSettingsService.ts  ingestService.test.ts  ingestService.ts  libraryAssetUrl.test.ts  libraryAssetUrl.ts  localFileDialogService.test.ts  localFileDialogService.ts  mediaLibraryRepository.test.ts  mediaLibraryRepository.ts  platformPluginService.test.ts  platformPluginService.ts  playlistCoverService.ts  podcastService.ts  providerAdapters.test.ts  providerAdapters.ts  providerService.test.ts  providerService.ts  runtimeLogger.ts  settingsService.ts  setupService.ts  summaryChatService.test.ts  summaryChatService.ts  supertonicService.test.ts  supertonicService.ts  systemPromptSettingsService.test.ts  systemPromptSettingsService.ts  tauriHelperClient.test.ts  (+22 more)
client/apps/tauri/src/test/: setup.ts
client/apps/tauri/video-skills/: README.md  video-skill.schema.json
client/apps/tauri/video-skills/caption-clip-wipe/: SKILL.md  manifest.json
client/apps/workers/: .dev.vars.example  package.json  tsconfig.json  wrangler.toml
client/apps/workers/src/: gemini.ts  index.ts
client/tooling/eslint/: package.json
client/tooling/prettier/: package.json
client/tooling/tailwind/: package.json  theme.css
client/tooling/typescript/: package.json
client/turbo/generators/templates/: package.json.hbs
docs/: LOCAL_MODEL.md  WINDOWS_SIGNING.md  release.md
(+77 files in other folders)
