[package]
name = "openbrief"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
license = "AGPL-3.0-only"
edition = "2021"
default-run = "openbrief"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openbrief_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openbrief"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-shell = "2.3.5"
futures-util = "0.3"
reqwest = { version = "0.13.3", features = ["stream"] }
sha1 = "0.10"
tauri-plugin-dialog = "2.7.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-log = "2"
log = "0.4"
hound = "3.5"
transcribe-rs = { version = "0.3.8", features = ["whisper-cpp"] }
subtp = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSWindow"] }

[workspace]
members = [".", "helper"]
resolver = "2"
